[package]
name = "cjc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for the CJC compiler and runtime"

[[bin]]
name = "cjc"
path = "src/main.rs"

[dependencies]
cjc-ast = { workspace = true }
cjc-diag = { workspace = true }
cjc-lexer = { workspace = true }
cjc-parser = { workspace = true }
cjc-types = { workspace = true }
cjc-runtime = { workspace = true }
cjc-eval = { workspace = true }
cjc-hir.workspace = true
cjc-mir.workspace = true
cjc-mir-exec.workspace = true
cjc-module.workspace = true
cjc-snap.workspace = true
