[package]
name = "cjc-cronos"
description = "Deterministic time-series analysis and forecasting for CJC-Lang — ETS, ARIMA/SARIMA, Kalman filter with RTS smoother, STL decomposition, with byte-identical backtests across runs and platforms"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["time-series", "forecasting", "statistics", "deterministic", "reproducible"]
categories = ["science", "mathematics"]

[lib]
path = "src/lib.rs"

[dependencies]
cjc-data = { workspace = true }
cjc-repro = { workspace = true }
cjc-runtime = { workspace = true }
cjc-locke = { workspace = true }

[dev-dependencies]
proptest = "1"
bolero = "0.13.4"
tempfile = "3"
