[package]
name = "cjc-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tidyverse-inspired data manipulation: DataFrame, filter, group_by, join"

[dependencies]
cjc-runtime = { workspace = true }
cjc-repro = { workspace = true }
cjc-regex.workspace = true

[dev-dependencies]
proptest = "1"
bolero = "0.13.4"
